Update subtitle for role and specialization

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Hi, I'm Garret
-subtitle: Data Analyst specializing in eCommerce Analytics, Visualization, and AI-Driven Insights
+subtitle: Performance Marketing Analyst specializing in Ecommerce Analytics (Amazon, Walmart), Visualization and Data-Driven Insights
 ---
