--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
 title: Hi, I'm Garret
-subtitle: Performance Marketing Analyst specializing in Ecommerce Analytics (Amazon, Walmart), Visualization and Data-Driven Insights
+subtitle: Performance Marketing Analyst focused on eCommerce Analytics, Data Visualization, and Advertising Performance Optimization
 ---
+
