Update subtitle for clarity and focus

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: Hi, I'm Garret
-subtitle: Performance Marketing Analyst focused on eCommerce Analytics, Data Visualization, and Advertising Performance Optimization
+subtitle: Performance Marketing Analyst | Amazon & Walmart Advertising | Turning Ad Data into Revenue Growth
 ---
 
