--- a/index.html
+++ b/index.html
@@ -4,3 +4,29 @@ title: Hi, I'm Garret
 subtitle: Performance Marketing Analyst | Amazon & Walmart Advertising | Turning Ad Data into Revenue Growth
 ---
 
+I specialize in transforming marketplace advertising data into actionable insights that drive real revenue growth. With 4+ years focused on Amazon and Walmart, I've helped eCommerce sellers generate over $5M in additional revenue through data-driven PPC strategies.
+
+### Featured Videos
+
+<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin: 2rem 0;">
+  <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+    <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/qR3jeHxFNn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  
+  <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+    <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/ij1eGiySwzE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  
+  <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+    <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/cajtrjMRA-s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+</div>
+
+### What I Bring to Your Business
+
+**$5M+ in additional revenue generated** for Amazon and Walmart sellers through strategic advertising optimization.
+
+I combine technical data analysis with proven marketing strategies to help brands achieve 300%+ revenue increases while cutting ad costs by 50%+.
+
+Want to see how? [Check out my projects](/projects) or [let's talk](/contact).
+
