Refactor video container and iframe elements
Removed specific width and height attributes from iframes and adjusted video container structure.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,14 @@ title: Hi, I'm Garret
 subtitle: Performance Marketing Analyst | Amazon & Walmart Advertising | Turning Ad Data into Revenue Growth
 ---
 
-<p>I specialize in transforming marketplace advertising data into actionable insights that drive real revenue growth. With 4+ years focused on Amazon and Walmart, I've helped eCommerce sellers generate over $5M in additional revenue through data-driven PPC strategies.</p>
-
-<h3>Featured Videos</h3>
-
-<div class="video-container" style="margin-bottom: 30px;">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/qR3jeHxFNn4" frameborder="0" allowfullscreen></iframe>
+<div class="video-container">
+  <iframe src="https://www.youtube.com/embed/qR3jeHxFNn4" frameborder="0" allowfullscreen></iframe>
 </div>
 
-<div class="video-container" style="margin-bottom: 30px;">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/ij1eGiySwzE" frameborder="0" allowfullscreen></iframe>
+<div class="video-container">
+  <iframe src="https://www.youtube.com/embed/ij1eGiySwzE" frameborder="0" allowfullscreen></iframe>
 </div>
 
-<div class="video-container" style="margin-bottom: 30px;">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/cajtrjMRA-s" frameborder="0" allowfullscreen></iframe>
+<div class="video-container">
+  <iframe src="https://www.youtube.com/embed/cajtrjMRA-s" frameborder="0" allowfullscreen></iframe>
 </div>
-
-<h3>What I Do</h3>
-
-<p>I help Amazon and Walmart sellers cut ad costs, boost ROI, and achieve consistent profitable sales.</p>
-
-<p>Ready to take your marketplace advertising to the next level? <a href="/projects">View my projects</a> or <a href="/contact">get in touch</a>.</p>
